[package]
name = "chrom-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "8.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
uuid = { version = "1.0", features = ["v4"] }
openssl = { version = "0.10", features = ["vendored"] }


[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'
strip = true
