[package]
name = "chrom-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "3.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }


[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'
strip = true
